--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,20 +2,20 @@
 PORT=3000
 
 # Database Configuration
-DATABASE_NAME=croper-tech-test
+DATABASE_NAME=tech-test
 DATABASE_PORT=27017
 
 # MongoDB Configuration
-MONGO_DB=croper-tech-test
+MONGO_DB=tech-test
 MONGO_INITDB_ROOT_USERNAME=root
 MONGO_INITDB_ROOT_PASSWORD=root
 MONGO_PORT=27017
 MONGO_HOST=localhost
-MONGO_CONNECTION=mongodb://root:root@localhost:27017/croper-tech-test
+MONGO_CONNECTION=mongodb://root:root@localhost:27017/tech-test
 
 # JWT Configuration
 JWT_SECRET=
 JWT_EXPIRES_IN=1d
 
 # CORS
-CORS_ORIGINS=http://localhost:3000,https://croper-tech-test.vercel.app 
+CORS_ORIGINS=http://localhost:3000,https://tech-test.vercel.app 
