--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,3 +8,27 @@ services:
       - '27017:27017'
     volumes:
       - ./mongo_data:/data/db
+    networks:
+      - app-network
+
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '3000:3000'
+    environment:
+      - PORT=3000
+      - MONGODB_URL=mongodb://root:root@mongo:27017/shopping_cart_app?authSource=admin
+      - JWT_SECRET=${JWT_SECRET:-your-secret-jwt-key}
+      - JWT_EXPIRES_IN=1d
+      - CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+    depends_on:
+      - mongo
+    networks:
+      - app-network
+    restart: unless-stopped
+
+networks:
+  app-network:
+    driver: bridge
