--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "croper-tech-test",
+  "name": "shopping-cart-app-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
